// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenLinkCell renders known token on a different chain 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 68px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
}

.c5 {
  position: absolute;
  border-radius: 4px;
  left: 65%;
  top: 65%;
  outline: 1.5px solid #FFFFFF;
  width: 40%;
  height: 40%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #222222;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

.c7 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <a
        class="c0"
        href="/explore/tokens/polygon/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <img
              class="c4"
              src="blank_token.svg"
            />
            <div
              class="c5"
            >
              <svg
                aria-labelledby="titleID"
                height="100%"
                style="width: 100%; height: 100%;"
                width="100%"
              >
                <title
                  id="titleID"
                >
                  Polygon logo
                </title>
                <rect
                  fill="#F9F9F9"
                  height="100%"
                  rx="2"
                  width="100%"
                />
                <rect
                  fill="#9558FF33"
                  height="100%"
                  rx="2"
                  width="100%"
                />
                <svg
                  height="100%"
                  width="100%"
                >
                  polygon.svg
                </svg>
              </svg>
            </div>
          </div>
          <div
            class="c6 c7 css-1urox24"
          >
            USDC
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TokenLinkCell renders known token on mainnet 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 68px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c5 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #222222;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <a
        class="c0"
        href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <img
              class="c4"
              src="blank_token.svg"
            />
          </div>
          <div
            class="c5 c6 css-1urox24"
          >
            USDC
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TokenLinkCell renders unknown token 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 68px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c5 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #222222;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<span
    class="t_light is_inversed _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <a
        class="c0"
        href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <img
              class="c4"
              src="blank_token.svg"
            />
          </div>
          <div
            class="c5 c6 css-1urox24"
          >
            UNKNOWN
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;
